--- a/pruebaSpring/pom.xml
+++ b/pruebaSpring/pom.xml
@@ -102,6 +102,7 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
