cambio de nombre de Proyecto a AppSpring

--- a/pruebaSpring/.project
+++ b/pruebaSpring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pruebaSpring</name>
+	<name>AppSpring</name>
 	<comment></comment>
 	<projects>
 	</projects>
