--- a/pruebaSpring/pom.xml
+++ b/pruebaSpring/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.prueba.spring</groupId>
-  <artifactId>pruebaSpring</artifactId>
+  <groupId>com.app.spring</groupId>
+  <artifactId>AppSpring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>pruebaSpring Maven Webapp</name>
+  <name>appSpring Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -89,7 +89,7 @@
   </dependencies>
 
   <build>
-    <finalName>pruebaSpring</finalName>
+    <finalName>AppSpring</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
